# dgl

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile.rocm  README.md
.github/workflows/: lint.yml
cmake/modules/: HIP.cmake  dgl_hipify.cmake
conda/dgl/: meta.yaml
dgl_sparse/: CMakeLists.txt  build.sh
docker/: Dockerfile.ci_gpu_rocm  Dockerfile.ci_rocm  Dockerfile.rocm-complete  Dockerfile.rocm-deps-only  README.md
examples/mxnet/gin/: main.py
examples/pytorch/gas/: README.md
graphbolt/: CMakeLists.txt  build.sh  build_rocm.sh
graphbolt/include/graphbolt/: async.h  continuous_seed.h  fused_csc_sampling_graph.h
graphbolt/src/: cache_policy.h  cnumpy.cc  cnumpy.h  expand_indptr.cc  macro.h  python_binding.cc
graphbolt/src/cuda/: common.h  common_cuda.h  common_hip.h  cooperative_minibatching_utils.cu  cooperative_minibatching_utils.cuh  cooperative_minibatching_utils.h  cumsum.cu  expand_indptr.cu  index_select_csc_impl.cu  isin.cu  neighbor_sampler.cu  sampling_utils.cu  sort_impl.cu  unique_and_compact_impl.cu  utils.h
graphbolt/src/cuda/extension/: gpu_cache.h  gpu_graph_cache.cu  unique_and_compact_map.cu
include/dgl/: array_iterator.h
include/dgl/aten/: macro.h
include/dgl/hip/: cuda_to_hip.h
include/dgl/hip/hip_extensions/: amd_warp_primitives.h
include/dgl/runtime/: c_runtime_api.h  ndarray.h  tensordispatch.h
python/: setup-amd.py  setup.py  update_version.py
python/dgl/: convert.py  ndarray.py
python/dgl/_ffi/: libinfo.py  runtime_ctypes.py
python/dgl/backend/pytorch/: tensor.py
python/dgl/data/: __init__.py
python/dgl/distributed/: dist_graph.py  graph_services.py  partition.py
python/dgl/graphbolt/impl/: ondisk_dataset.py
script/: hipify-inplace.sh  install_graphbolt_deps.sh  run_code_cov.sh  run_cpp_code_cov.sh
src/array/: arith.h  filter.cc  selector.h  uvm_array.cc
src/array/cuda/: array_cumsum.cu  array_index_select.cu  array_nonzero.cu  array_op_impl.cu  array_scatter.cu  array_sort.cu  atomic.cuh  bf16.cuh  coo2csr.cu  coo_sort.cu  csr2coo.cu  csr_get_data.cu  csr_mm.cu  csr_sort.cu  csr_sum.cu  csr_transpose.cc  cuda_filter.cu  cusparse_dispatcher.cuh  disjoint_union.cu  fp16.cuh  gather_mm.cu  labor_sampling.cu  negative_sampling.cu  rowwise_sampling.cu  rowwise_sampling_prob.cu  sddmm.cu  sddmm.cuh  sddmm_hetero_coo.cu  sddmm_hetero_csr.cu  segment_reduce.cu  segment_reduce.cuh  spmat_op_impl_coo.cu  spmat_op_impl_csr.cu  spmm.cu  spmm.cuh  spmm_hetero.cu  utils.cu  utils.h
src/array/cuda/uvm/: array_index_select_uvm.cu
src/geometry/cuda/: edge_coarsening_impl.cu  geometry_op_impl.cu
src/graph/: heterograph_capi.cc
src/graph/sampling/randomwalks/: frequency_hashmap.cu  get_node_types_gpu.cu  randomwalk_gpu.cu
src/graph/transform/: to_block.cc
src/graph/transform/cuda/: cuda_compact_graph.cu  cuda_map_edges.cuh  cuda_to_block.cu  knn.cu
src/partition/cuda/: partition_op.cu
src/random/: continuous_seed.h
src/runtime/: c_runtime_api.cc  cpu_device_api.cc  ndarray.cc
src/runtime/cuda/: cuda_common.h  cuda_device_api.cc  cuda_hashtable.cu  cuda_hashtable.cuh  gpu_cache.cu
tensoradapter/include/: tensoradapter.h
tensoradapter/pytorch/: CMakeLists.txt  build.sh  build_rocm.sh  dgl_hipify.py  torch.cpp
tests/backend/: backend_unittest.py
tests/backend/pytorch/: __init__.py
tests/cpp/: common.h  test_aten.cc  test_partition.cc  test_spmat_coo.cc  test_spmat_csr.cc
tests/integration/: test_data.py
tests/python/common/: test_heterograph.py  test_traversal.py
tests/python/common/cuda/: test_gpu_cache.py
tests/python/common/data/: test_data.py
tests/python/common/ops/: test_ops.py
tests/python/common/sampling/: test_sampling.py
tests/python/pytorch/: test_ffi-stream.py
tests/python/pytorch/cuda/: test_nccl.py
tests/python/pytorch/dataloading/: test_dataloader.py
tests/python/pytorch/graphbolt/: gb_test_utils.py  test_base.py  test_dataloader.py  test_dataset.py  test_feature_fetcher.py  test_graphbolt_utils.py  test_integration.py  test_item_sampler.py  test_itemset.py  test_minibatch.py  test_subgraph_sampler.py  test_utils.py
tests/python/pytorch/graphbolt/impl/: test_basic_feature_store.py  test_cooperative_minibatching_utils.py  test_cpu_cached_feature.py  test_disk_based_feature_store.py  test_feature_cache.py  test_fused_csc_sampling_graph.py  test_gpu_cached_feature.py  test_gpu_graph_cache.py  test_hetero_cached_feature.py  test_in_subgraph_sampler.py  test_legacy_dataset.py  test_negative_sampler.py  test_neighbor_sampler.py  test_ondisk_dataset.py  test_sampled_subgraph_impl.py  test_torch_based_feature_store.py
tests/python/pytorch/graphbolt/internal/: test_sample_utils.py  test_utils.py
tests/python/pytorch/nn/: test_nn.py  test_sparse_emb.py
tests/python/pytorch/optim/: test_optim.py
tests/scripts/: task_unit_test_rocm.sh  task_unit_test_rocm_logger.sh
tests/utils/: process_feature_list.py
tools/: distgraphlaunch.py  launch.py
